feat: Introduce new Monk commands and enhance skill handling
- Added new commands: MonkOrbCommand, MonkFuryCommand, MonkAsuraCommand, and MonkResetCommand for improved skill invocation.
- Refactored MonkAsuraPlugin to register new commands and update skill messaging.
- Enhanced MonkComboService with logging for better debugging and tracking of skill invocations.
- Updated MonkSkillInputHandler to support new command structure and improved input handling.
- Adjusted skill definitions and UI elements to reflect new command usage and key bindings.
- Introduced MonkDebugLog for detailed logging of skill execution and player interactions.